test/seq/cmdlists/invalid_ttl_t2.err
SyntaxError: Time too short (min 30ns)
Line: 3
ttl(2)=true t=20ns
              ~~~~
